--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="https://esportid.github.io/esportid/about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
