--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <h1>Wiki Website</h1>
+        <h1>Esport ID</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
