--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="https://esportid.github.io/esportid/about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="https://esportid.github.io/esportid/flipbook.html">Flipbook</a></li>
             </ul>
         </nav>
     </header>
