--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esport ID - About</title>
-   <style>
+  <style>
         /* CSS styling for the wiki website */
         body {
             font-family: Arial, sans-serif;
@@ -37,6 +37,11 @@
         
         nav li a:hover {
             background-color: #ddd;
+        }
+        
+        nav li a.active {
+            background-color: #555;
+            color: #fff;
         }
     </style>
 </head>
