--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Esport ID</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://esportid.github.io/esportid/index.html">Home</a></li>
                 <li><a href="https://esportid.github.io/esportid/about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="https://esportid.github.io/esportid/flipbook.html">Flipbook</a></li>
