--- a/about.html
+++ b/about.html
@@ -50,9 +50,10 @@
         <h1>Wiki Website</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://esportid.github.io/esportid/index.html">Home</a></li>
                 <li><a href="https://esportid.github.io/esportid/about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="https://esportid.github.io/esportid/flipbook.html">Flipbook</a></li>
             </ul>
         </nav>
     </header>
