--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <h1>Wiki Website</h1>
+        <h1>Flipbook Pemanasan Global</h1>
         <nav>
             <ul>
                 <li><a href="https://esportid.github.io/esportid/index.html">Home</a></li>
