--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
         <h1>Flipbook Pemanasan Global</h1>
         <nav>
             <ul>
-                <li><a href="https://esportid.github.io/esportid/index.html">Home</a></li>
-                <li><a href="https://esportid.github.io/esportid/about.html">About</a></li>
-                <li><a href="https://esportid.github.io/esportid/flipbook.html">Flipbook</a></li>
+                <li><a href="https://esportid.github.io/flipbookpemanasanglobal//index.html">Home</a></li>
+                <li><a href="https://esportid.github.io/flipbookpemanasanglobal//about.html">About</a></li>
+                <li><a href="https://esportid.github.io/flipbookpemanasanglobal//flipbook.html">Flipbook</a></li>
             </ul>
         </nav>
     </header>
