--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2023 Esport ID. All rights reserved.</p>
+        <p>&copy; 2023 pemanasan global. All rights reserved.</p>
     </footer>
 </body>
 </html>
