--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <li><a href="https://esportid.github.io/flipbookpemanasanglobal/index.html">Home</a></li>
                 <li><a href="https://esportid.github.io/flipbookpemanasanglobal/about.html">About</a></li>
                 <li><a href="https://esportid.github.io/flipbookpemanasanglobal/flipbook.html">Flipbook</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1OO8aocznj7hsxsPJ9Cudovc2alHi1KiS?usp=sharing">Lembar Kerja</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1Bjd37pxxNEKf6n4Ox9FgNhPU5_jmUkq-?usp=sharing">Latihan Mandiri</a></li>
             </ul>
         </nav>
     </header>
